ws-slo/configs/flux-operator/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-receivers
  namespace: flux-system
spec:
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator-receivers-redirect
  namespace: flux-system
spec:
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
